# crclib

./: .clang-format  .clang-tidy  .gitignore  LICENSE  TODO.md  main.c  meson.build  native.ini
.github/workflows/: ci.yml
crc/: crc.c  crc.h  crc_cfg.h  crc_types.h  meson.build
tests/: meson.build  test_crc.cpp
